python/testData/inspections/PyUnresolvedReferencesInspection3K/FromImportWalrusComprehensionVariableLeak/a.py
from c import y
from c import <error descr="Cannot find reference 'x' in 'c'">x</error>
print(y)
print(x)
